@@ -2,7 +2,6 @@ package org.tron.sunio.contract_mirror.mirror.contracts.impl;
 
 import cn.hutool.core.util.ObjectUtil;
 import lombok.extern.slf4j.Slf4j;
-import org.tron.sunio.contract_mirror.event_decode.events.EventUtils;
 import org.tron.sunio.contract_mirror.mirror.chainHelper.IChainHelper;
 import org.tron.sunio.contract_mirror.mirror.chainHelper.TriggerContractInfo;
 import org.tron.sunio.contract_mirror.mirror.consts.ContractMirrorConst;
@@ -19,8 +18,7 @@ import org.web3j.abi.datatypes.Type;
 import org.web3j.abi.datatypes.generated.Uint256;
 
 import java.math.BigInteger;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -52,7 +50,6 @@ import static org.tron.sunio.contract_mirror.event_decode.events.Curve3PoolEvent
 public class Curve3Pool extends BaseContract {
     private static final int N_COINS = 3;
     private static final BigInteger FEE_DENOMINATOR = BigInteger.TEN.pow(10);
-    private static final long ADMIN_ACTIONS_DELAY = 3 * 86400;
     private Curve3PoolData curve3PoolData;
 
     public Curve3Pool(String address, IChainHelper iChainHelper, IDbHandler iDbHandler, Map<String, String> sigMap) {
@@ -77,15 +74,9 @@ public class Curve3Pool extends BaseContract {
     private void updateCoinsAndBalance(Curve3PoolData curve3PoolData) {
         for (int i = 0; i < N_COINS; i++) {
             // update coins string
-            List<Type> inputParameters = Arrays.asList(new Uint256(i));
-            List<TypeReference<?>> outputParameters = Arrays.asList(new TypeReference<Address>() {
-            });
-            TriggerContractInfo triggerContractInfo = new TriggerContractInfo(
-                    ContractMirrorConst.EMPTY_ADDRESS,
-                    address,
-                    "coins",
-                    inputParameters,
-                    outputParameters
+            TriggerContractInfo triggerContractInfo = new TriggerContractInfo(ContractMirrorConst.EMPTY_ADDRESS, address,
+                    "coins", List.of(new Uint256(i)), List.of(new TypeReference<Address>() {
+            })
             );
             List<Type> results = this.iChainHelper.triggerConstantContract(triggerContractInfo);
             if (results.size() == 0) {
@@ -93,17 +84,10 @@ public class Curve3Pool extends BaseContract {
             } else {
                 curve3PoolData.updateCoins(i, WalletUtil.hexStringToTron((String) results.get(0).getValue()));
             }
-
             // update coins balance
-            outputParameters = Arrays.asList(new TypeReference<Uint256>() {
-            });
-            triggerContractInfo = new TriggerContractInfo(
-                    ContractMirrorConst.EMPTY_ADDRESS,
-                    address,
-                    "balances",
-                    inputParameters,
-                    outputParameters
-            );
+            triggerContractInfo = new TriggerContractInfo(ContractMirrorConst.EMPTY_ADDRESS, address, "balances",
+                    List.of(new Uint256(i)), List.of(new TypeReference<Uint256>() {
+            }));
             results = this.iChainHelper.triggerConstantContract(triggerContractInfo);
             if (results.size() == 0) {
                 log.error("Get contract:{} type:{} , function:{} result len is zero", this.address, this.type, "coins");
@@ -114,16 +98,9 @@ public class Curve3Pool extends BaseContract {
     }
 
     private void updateSupply(Curve3PoolData curve3PoolData, String tokenAddress) {
-        List<Type> inputParameters = new ArrayList<>();
-        List<TypeReference<?>> outputParameters = Arrays.asList(new TypeReference<Uint256>() {
-        });
-        TriggerContractInfo triggerContractInfo = new TriggerContractInfo(
-                ContractMirrorConst.EMPTY_ADDRESS,
-                this.getAddress(),
-                tokenAddress,
-                inputParameters,
-                outputParameters
-        );
+        TriggerContractInfo triggerContractInfo = new TriggerContractInfo(ContractMirrorConst.EMPTY_ADDRESS, this.getAddress(),
+                tokenAddress, Collections.emptyList(), List.of(new TypeReference<Uint256>() {
+        }));
         List<Type> results = this.iChainHelper.triggerConstantContract(triggerContractInfo);
         if (results.size() == 0) {
             log.error("Get contract:{} type:{} , token: {} function: totalSupply() result len is zero", this.address, this.type, tokenAddress);
@@ -134,44 +111,39 @@ public class Curve3Pool extends BaseContract {
 
     @Override
     public boolean initDataFromChain1() {
-        try {
-            Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
-            updateCoinsAndBalance(curve3PoolData);
-            String token = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "token").toString());
-            curve3PoolData.setToken(token);
-            updateSupply(curve3PoolData, token);
-            BigInteger fee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "fee");
-            curve3PoolData.setFee(fee);
-            BigInteger futureFee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_fee");
-            curve3PoolData.setFutureFee(futureFee);
-            BigInteger adminFee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "admin_fee");
-            curve3PoolData.setAdminFee(adminFee);
-            BigInteger futureAdminFee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_admin_fee");
-            curve3PoolData.setFutureAdminFee(futureAdminFee);
-            BigInteger adminActionsDeadline = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "admin_actions_deadline");
-            curve3PoolData.setAdminActionsDeadline(adminActionsDeadline);
-            String feeConverter = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "fee_converter").toString());
-            curve3PoolData.setFeeConverter(feeConverter);
-            BigInteger initialA = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "initial_A");
-            curve3PoolData.setInitialA(initialA);
-            BigInteger initialATime = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "initial_A_time");
-            curve3PoolData.setInitialATime(initialATime);
-            BigInteger futureA = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_A");
-            curve3PoolData.setFutureA(futureA);
-            BigInteger futureATime = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_A_time");
-            curve3PoolData.setFutureATime(futureATime);
-            String owner = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "owner").toString());
-            curve3PoolData.setOwner(owner);
-            String futureOwner = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "future_owner").toString());
-            curve3PoolData.setFutureOwner(futureOwner);
-            BigInteger transferOwnershipDeadline = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "transfer_ownership_deadline");
-            curve3PoolData.setTransferOwnershipDeadline(transferOwnershipDeadline);
-            isDirty = true;
-            return true;
-        } catch (Exception e) {
-            log.error("Contract:{} type:{}, failed at function CallChainData:{}", address, type, e.toString());
-            return false;
-        }
+        Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
+        updateCoinsAndBalance(curve3PoolData);
+        String token = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "token").toString());
+        curve3PoolData.setToken(token);
+        updateSupply(curve3PoolData, token);
+        BigInteger fee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "fee");
+        curve3PoolData.setFee(fee);
+        BigInteger futureFee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_fee");
+        curve3PoolData.setFutureFee(futureFee);
+        BigInteger adminFee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "admin_fee");
+        curve3PoolData.setAdminFee(adminFee);
+        BigInteger futureAdminFee = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_admin_fee");
+        curve3PoolData.setFutureAdminFee(futureAdminFee);
+        BigInteger adminActionsDeadline = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "admin_actions_deadline");
+        curve3PoolData.setAdminActionsDeadline(adminActionsDeadline);
+        String feeConverter = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "fee_converter").toString());
+        curve3PoolData.setFeeConverter(feeConverter);
+        BigInteger initialA = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "initial_A");
+        curve3PoolData.setInitialA(initialA);
+        BigInteger initialATime = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "initial_A_time");
+        curve3PoolData.setInitialATime(initialATime);
+        BigInteger futureA = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_A");
+        curve3PoolData.setFutureA(futureA);
+        BigInteger futureATime = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "future_A_time");
+        curve3PoolData.setFutureATime(futureATime);
+        String owner = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "owner").toString());
+        curve3PoolData.setOwner(owner);
+        String futureOwner = WalletUtil.ethAddressToTron(callContractAddress(ContractMirrorConst.EMPTY_ADDRESS, "future_owner").toString());
+        curve3PoolData.setFutureOwner(futureOwner);
+        BigInteger transferOwnershipDeadline = callContractU256(ContractMirrorConst.EMPTY_ADDRESS, "transfer_ownership_deadline");
+        curve3PoolData.setTransferOwnershipDeadline(transferOwnershipDeadline);
+        isDirty = true;
+        return true;
     }
 
     @Override
@@ -193,40 +165,40 @@ public class Curve3Pool extends BaseContract {
     protected void handleEvent1(String eventName, String[] topics, String data, HandleEventExtraData handleEventExtraData) {
         switch (eventName) {
             case EVENT_NAME_TOKEN_EXCHANGE:
-                handleEventTokenExchange(topics, data);
+                handleEventTokenExchange(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_ADD_LIQUIDITY:
-                handleEventAddLiquidity(topics, data);
+                handleEventAddLiquidity(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_REMOVE_LIQUIDITY:
-                handleEventRemoveLiquidity(topics, data);
+                handleEventRemoveLiquidity(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_REMOVE_LIQUIDITY_ONE:
-                handleEventRemoveLiquidityOne(topics, data);
+                handleEventRemoveLiquidityOne(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_REMOVE_LIQUIDITY_IM_BALANCE:
-                handleEventRemoveLiquidityImbalance(topics, data);
+                handleEventRemoveLiquidityImbalance(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_COMMIT_NEW_ADMIN:
-                handleEventCommitNewAdmin(topics, data);
+                handleEventCommitNewAdmin(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_NEW_ADMIN:
-                handleEventNewAdmin(topics, data);
+                handleEventNewAdmin(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_NEW_FEE_CONVERTER:
-                handleEventNewFeeConverter(topics, data);
+                handleEventNewFeeConverter(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_COMMIT_NEW_FEE:
-                handleEventCommitNewFee(topics, data);
+                handleEventCommitNewFee(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_NEW_FEE:
-                handleEventNewFee(topics, data);
+                handleEventNewFee(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_RAMP_A:
-                handleEventRampA(topics, data);
+                handleEventRampA(topics, data, handleEventExtraData);
                 break;
             case EVENT_NAME_STOP_RAMP_A:
-                handleEventStopRampA(topics, data);
+                handleEventStopRampA(topics, data, handleEventExtraData);
                 break;
             default:
                 log.warn("Contract:{} type:{} event:{} not handle", address, type, topics[0]);
@@ -234,12 +206,14 @@ public class Curve3Pool extends BaseContract {
         }
     }
 
-    private void handleEventTokenExchange(String[] topics, String data) {
+    private void handleEventTokenExchange(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
         if (curve3PoolData.getAdminFee().compareTo(BigInteger.ZERO) == 0) {
-
-            EventValues eventValues = EventUtils.getEventValue(EVENT_NAME_TOKEN_EXCHANGE_BODY,
-                    Arrays.asList(topics), data, false);
+            EventValues eventValues = getEventValue(EVENT_NAME_TOKEN_EXCHANGE, EVENT_NAME_TOKEN_EXCHANGE_BODY,
+                    topics, data, handleEventExtraData.getUniqueId());
+            if (ObjectUtil.isNull(eventValues)) {
+                return;
+            }
             int i = ((BigInteger) eventValues.getNonIndexedValues().get(0).getValue()).intValue();
             BigInteger dx = (BigInteger) eventValues.getNonIndexedValues().get(1).getValue();
             int j = ((BigInteger) eventValues.getNonIndexedValues().get(0).getValue()).intValue();
@@ -257,11 +231,13 @@ public class Curve3Pool extends BaseContract {
         this.isDirty = true;
     }
 
-    private void handleEventAddLiquidity(String[] topics, String data) {
-        // 暂时 默认没有特殊的收费ERC20
-        // TODO 特殊收费ERC20处理
-        EventValues eventValues = EventUtils.getEventValue(EVENT_NAME_ADD_LIQUIDITY_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventAddLiquidity(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        // TODO 暂时 默认没有特殊的收费ERC20 特殊收费ERC20处理
+        EventValues eventValues = getEventValue(EVENT_NAME_ADD_LIQUIDITY, EVENT_NAME_ADD_LIQUIDITY_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
         StaticArray<Uint256> amounts = (StaticArray<Uint256>) eventValues.getNonIndexedValues().get(0);
         StaticArray<Uint256> fees = (StaticArray<Uint256>) eventValues.getNonIndexedValues().get(1);
@@ -278,9 +254,12 @@ public class Curve3Pool extends BaseContract {
         this.isDirty = true;
     }
 
-    private void handleEventRemoveLiquidity(String[] topics, String data) {
-        EventValues eventValues = EventUtils.getEventValue(EVENT_NAME_REMOVE_LIQUIDITY_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventRemoveLiquidity(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_REMOVE_LIQUIDITY, EVENT_NAME_REMOVE_LIQUIDITY_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
         StaticArray<Uint256> amounts = (StaticArray<Uint256>) eventValues.getNonIndexedValues().get(0);
         for (int i = 0; i < N_COINS; i++) {
@@ -292,15 +271,18 @@ public class Curve3Pool extends BaseContract {
         this.isDirty = true;
     }
 
-    private void handleEventRemoveLiquidityOne(String[] topics, String data) {
+    private void handleEventRemoveLiquidityOne(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
         updateBaseInfo(isUsing, false, isAddExchangeContracts);
         this.isReady = false;
         this.isDirty = true;
     }
 
-    private void handleEventRemoveLiquidityImbalance(String[] topics, String data) {
-        EventValues eventValues = EventUtils.getEventValue(EVENT_NAME_REMOVE_LIQUIDITY_IM_BALANCE_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventRemoveLiquidityImbalance(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_REMOVE_LIQUIDITY_IM_BALANCE, EVENT_NAME_REMOVE_LIQUIDITY_IM_BALANCE_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
         StaticArray<Uint256> amounts = (StaticArray<Uint256>) eventValues.getNonIndexedValues().get(0);
         StaticArray<Uint256> fees = (StaticArray<Uint256>) eventValues.getNonIndexedValues().get(1);
@@ -317,69 +299,87 @@ public class Curve3Pool extends BaseContract {
         this.isDirty = true;
     }
 
-    private void handleEventCommitNewAdmin(String[] topics, String data) {
-        EventValues values = EventUtils.getEventValue(EVENT_NAME_COMMIT_NEW_ADMIN_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventCommitNewAdmin(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_COMMIT_NEW_ADMIN, EVENT_NAME_COMMIT_NEW_ADMIN_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
-        BigInteger deadline = (BigInteger) values.getIndexedValues().get(0).getValue();
-        String admin = WalletUtil.hexStringToTron((String) values.getIndexedValues().get(1).getValue());
+        BigInteger deadline = (BigInteger) eventValues.getIndexedValues().get(0).getValue();
+        String admin = WalletUtil.hexStringToTron((String) eventValues.getIndexedValues().get(1).getValue());
         curve3PoolData.setOwner(admin);
         curve3PoolData.setTransferOwnershipDeadline(deadline);
         isDirty = true;
     }
 
-    private void handleEventNewAdmin(String[] topics, String data) {
-        EventValues values = EventUtils.getEventValue(EVENT_NAME_NEW_ADMIN_BODY,
-                Arrays.asList(topics), data, false);
-        String admin = WalletUtil.hexStringToTron((String) values.getIndexedValues().get(0).getValue());
+    private void handleEventNewAdmin(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_NEW_ADMIN, EVENT_NAME_NEW_ADMIN_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
+        String admin = WalletUtil.hexStringToTron((String) eventValues.getIndexedValues().get(0).getValue());
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
         curve3PoolData.setOwner(admin);
         curve3PoolData.setTransferOwnershipDeadline(BigInteger.ZERO);
         isDirty = true;
     }
 
-    private void handleEventNewFeeConverter(String[] topics, String data) {
-        EventValues values = EventUtils.getEventValue(EVENT_NAME_NEW_FEE_CONVERTER_BODY,
-                Arrays.asList(topics), data, false);
-        String feeConverter = WalletUtil.hexStringToTron((String) values.getIndexedValues().get(0).getValue());
+    private void handleEventNewFeeConverter(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_NEW_FEE_CONVERTER, EVENT_NAME_NEW_FEE_CONVERTER_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
+        String feeConverter = WalletUtil.hexStringToTron((String) eventValues.getIndexedValues().get(0).getValue());
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
         curve3PoolData.setFeeConverter(feeConverter);
         isDirty = true;
     }
 
-    private void handleEventCommitNewFee(String[] topics, String data) {
-        EventValues values = EventUtils.getEventValue(EVENT_NAME_COMMIT_NEW_FEE_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventCommitNewFee(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_COMMIT_NEW_FEE, EVENT_NAME_COMMIT_NEW_FEE_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
-        BigInteger deadLine = (BigInteger) values.getIndexedValues().get(0).getValue();
-        BigInteger fee = (BigInteger) values.getNonIndexedValues().get(0).getValue();
-        BigInteger adminFee = (BigInteger) values.getNonIndexedValues().get(1).getValue();
+        BigInteger deadLine = (BigInteger) eventValues.getIndexedValues().get(0).getValue();
+        BigInteger fee = (BigInteger) eventValues.getNonIndexedValues().get(0).getValue();
+        BigInteger adminFee = (BigInteger) eventValues.getNonIndexedValues().get(1).getValue();
         curve3PoolData.setFee(fee);
         curve3PoolData.setAdminFee(adminFee);
         curve3PoolData.setAdminActionsDeadline(deadLine);
         isDirty = true;
     }
 
-    private void handleEventNewFee(String[] topics, String data) {
-        EventValues values = EventUtils.getEventValue(EVENT_NAME_NEW_FEE_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventNewFee(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_NEW_FEE, EVENT_NAME_NEW_FEE_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
-        BigInteger fee = (BigInteger) values.getNonIndexedValues().get(0).getValue();
-        BigInteger adminFee = (BigInteger) values.getNonIndexedValues().get(1).getValue();
+        BigInteger fee = (BigInteger) eventValues.getNonIndexedValues().get(0).getValue();
+        BigInteger adminFee = (BigInteger) eventValues.getNonIndexedValues().get(1).getValue();
         curve3PoolData.setFee(fee);
         curve3PoolData.setAdminFee(adminFee);
         curve3PoolData.setAdminActionsDeadline(BigInteger.ZERO);
         isDirty = true;
     }
 
-    private void handleEventRampA(String[] topics, String data) {
-        EventValues values = EventUtils.getEventValue(EVENT_NAME_RAMP_A_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventRampA(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_RAMP_A, EVENT_NAME_RAMP_A_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
-        BigInteger a = (BigInteger) values.getNonIndexedValues().get(0).getValue();
-        BigInteger af = (BigInteger) values.getNonIndexedValues().get(1).getValue();
-        BigInteger aT = (BigInteger) values.getNonIndexedValues().get(2).getValue();
-        BigInteger afT = (BigInteger) values.getNonIndexedValues().get(3).getValue();
+        BigInteger a = (BigInteger) eventValues.getNonIndexedValues().get(0).getValue();
+        BigInteger af = (BigInteger) eventValues.getNonIndexedValues().get(1).getValue();
+        BigInteger aT = (BigInteger) eventValues.getNonIndexedValues().get(2).getValue();
+        BigInteger afT = (BigInteger) eventValues.getNonIndexedValues().get(3).getValue();
         curve3PoolData.setInitialA(a);
         curve3PoolData.setInitialATime(aT);
         curve3PoolData.setFutureATime(afT);
@@ -387,12 +387,15 @@ public class Curve3Pool extends BaseContract {
         isDirty = true;
     }
 
-    private void handleEventStopRampA(String[] topics, String data) {
-        EventValues values = EventUtils.getEventValue(EVENT_NAME_STOP_RAMP_A_BODY,
-                Arrays.asList(topics), data, false);
+    private void handleEventStopRampA(String[] topics, String data, HandleEventExtraData handleEventExtraData) {
+        EventValues eventValues = getEventValue(EVENT_NAME_STOP_RAMP_A, EVENT_NAME_STOP_RAMP_A_BODY,
+                topics, data, handleEventExtraData.getUniqueId());
+        if (ObjectUtil.isNull(eventValues)) {
+            return;
+        }
         Curve3PoolData curve3PoolData = this.getVarCurve3PoolData();
-        BigInteger a = (BigInteger) values.getNonIndexedValues().get(0).getValue();
-        BigInteger aTime = (BigInteger) values.getNonIndexedValues().get(1).getValue();
+        BigInteger a = (BigInteger) eventValues.getNonIndexedValues().get(0).getValue();
+        BigInteger aTime = (BigInteger) eventValues.getNonIndexedValues().get(1).getValue();
         curve3PoolData.setFutureA(a);
         curve3PoolData.setInitialA(BigInteger.valueOf(a.longValue()));
         curve3PoolData.setInitialATime(aTime);
